--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=checkpoint
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+spring.datasource.username=rm551692
+spring.datasource.password=fiap23
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
